still working on Legalnars features

--- a/.cascade-rules.md
+++ b/.cascade-rules.md
@@ -22,6 +22,7 @@
    - Accent: `pippin` (#FFE8E5)
    - Use color variants defined in tailwind.config.js
 
+
 2. Typography:
    - Headings: Heebo font (`font-heading`)
      - Weights: 400, 500, 600, 700
@@ -81,6 +82,10 @@
    - Mobile-first approach
    - Use Tailwind breakpoints consistently
    - Test on multiple device sizes
+
+4. Design 
+- Please keep the design modern and clean.
+- Please keep the design consistent
 
 ## Development Rules
 1. File Naming:
